@@ -1,3 +1,12 @@
+2005-04-08  Roman Kennke  <roman@kennke.org>
+
+	* javax/swing/text/ImageIcon.java
+	(ImageIcon): Use setImage instead of direct assignment.
+	(setImage): Call loadImage to make sure that the image is loaded.
+	(loadImage): Waits for the image to complete loading.
+	(getImageLoadStatus): Added. Returns the load status of the
+	image.
+
 2005-04-08  Guilhem Lavaux  <guilhem@kaffe.org>
 
         * native/jni/classpath/jcl.h, 
